Some UI fixes. Still some work required